# virtual_robot

./: README.md
photoneo_virtual_robot_module/: CMakeLists.txt  package.xml  virtual_robot_plugin.xml
photoneo_virtual_robot_module/config/: bin_pose_emulator.yaml  bin_pose_emulator_ur5.yaml  pho_robot_loader_params.yaml
photoneo_virtual_robot_module/include/photoneo_virtual_robot_module/: virtual_robot_plugin.h
photoneo_virtual_robot_module/launch/: kuka_iiwa.launch  kuka_kr16_3.launch  ur_demo.launch
photoneo_virtual_robot_module/log/: trajectory_0.txt  trajectory_1.txt  trajectory_10.txt  trajectory_100.txt  trajectory_1000.txt  trajectory_1001.txt  trajectory_1002.txt  trajectory_1003.txt  trajectory_1004.txt  trajectory_1005.txt  trajectory_1006.txt  trajectory_1007.txt  trajectory_1008.txt  trajectory_1009.txt  trajectory_101.txt  trajectory_1010.txt  trajectory_1011.txt  trajectory_102.txt  trajectory_103.txt  trajectory_104.txt  trajectory_105.txt  trajectory_106.txt  trajectory_107.txt  trajectory_108.txt  trajectory_109.txt  trajectory_11.txt  trajectory_110.txt  trajectory_111.txt  trajectory_112.txt  trajectory_113.txt  trajectory_114.txt  trajectory_115.txt  trajectory_116.txt  trajectory_117.txt  trajectory_118.txt  trajectory_119.txt  trajectory_12.txt  trajectory_120.txt  trajectory_121.txt  trajectory_122.txt  (+972 more)
photoneo_virtual_robot_module/src/: trajectory_statistics.cpp  virtual_robot_plugin.cpp
virtual_robot/: CMakeLists.txt  package.xml
